--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2010-10-21  Valentin Hilbig  <tino@zoo.03.softkill.net>
+
+	* timeout.c (do_fork): bugfix, on fork failure timeout returned -1
+	instead of 210.
+
 2009-01-10  Valentin Hilbig  <tino@zoo.03.softkill.net>
 
 	* timeout.c (check): forgot to add correct timeout cause
